@@ -1,6 +1,7 @@
 Version history of the R genetic analysis package (R/gap)
 
 Version 1.2.3
+30-03-2021	Revise ESplot to use log(OR) as effect size
 22-03-2021	Add example for miamiplot in gap.Rnw
 12-02-2021	Revise circos.cnvplot() excluding records with start>end
 11-02-2021	Revise METAL_forestplot()
